# colorsfact

./: README.md  pyproject.toml
colorfact/: imageAnalysis.py  jira.csv  test_class.ipynb  test_matching.ipynb  update_data.py  utils.py  web_app.py
colorfact/configs/: config.yaml  outfit.yaml
colorfact/data/: Bdd test (1).xlsx  clothes.csv  data_0_90.xlsx  data_1000_1050.xlsx  data_1050_1150.xlsx  data_200_300.xlsx  data_2500_.xlsx  data_300_400.xlsx  data_400_600.xlsx  data_600_700.xlsx  data_700_800.xlsx  data_800_1000.xlsx  data_90_200.xlsx  data_preview.xlsx  data_preview_exploded.xlsx  final_data.xlsx  output.xlsx  test.xlsx
colorfact/mapping/: product_mapping.json
colorfact/vector_store/: faiss_index.idx
