[project]
name = "colorfact"
version = "0.1.0"
description = ""
authors = [
    {name = "Baha-Arfaoui",email = "baha.arfaoui01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyprojroot (>=0.3.0,<0.4.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

